app/main/default/objects/Flosum__Organisation__c/fields/Bitbucket_Synchronize__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Bitbucket_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bitbucket Synchronize</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>