app/main/default/objects/Flosum__Organisation__c/fields/Flosum__Category__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DevHub</fullName>
                </value>
                <value>
                    <fullName>Scratch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>