app/main/default/objects/Flosum__Organisation__c/fields/Flosum__Expiration_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>