app/main/default/objects/Flosum__Organisation__c/fields/Flosum__Last_Retrieval_Time__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Last_Retrieval_Time__c</fullName>
        <label>Last Retrieval Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>